crates/vescpkg-rs/tests/ui/callback_traits_require_unsafe_impl.stderr
error[E0200]: the trait `vescpkg_rs::__macro_support::PackageAppDataCallback` requires an `unsafe impl` declaration
 --> tests/ui/callback_traits_require_unsafe_impl.rs:5:1
  |
5 | impl PackageAppDataCallback for Callback {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: the trait `vescpkg_rs::__macro_support::PackageAppDataCallback` enforces invariants that the compiler can't check. Review the trait documentation and make sure this implementation upholds those invariants before adding the `unsafe` keyword
help: add `unsafe` to this trait implementation
  |
5 | unsafe impl PackageAppDataCallback for Callback {
  | ++++++
